# turtle-invaders

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  fortresses.py  main.py  pyproject.toml  pytest.ini  scoreboard.py  spaceship.py  spaceships.py
tests/: conftest.py  test_app.py  test_bullet.py  test_bullets.py  test_fortresses.py  test_scoreboard.py  test_spaceships.py  test_tools.py
turtle_invaders/: __main__.py  app.py  bullet.py  constants.py  fortresses.py  scoreboard.py  spaceships.py  tools.py  turtle_invaders.py  types_.py
