[project]
name = "day101-space-invaders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest]
testpaths = ["tests", "turtle_invaders"]
addopts = ["--import-mode=importlib"]

[dependency-groups]
bandit = [
    "bandit>=1.9.2",
]
dev = [
    "pytest>=9.0.1",
    "pytest-coverage>=0.0",
]
